--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        maven{
+            url 'http://dl.bintray.com/amulyakhare/maven'
+        }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath 'com.google.gms:google-services:4.2.0'
-
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
