--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
 
     //PIE CHART
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+
+    //Star
+    implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
